--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mf-workspace",
   "version": "0.0.1",
+  "private": true,
   "description": "mf-workspace",
   "main": "index.js",
   "scripts": {
