--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "mf-workspace",
+  "name": "mf-space",
   "version": "0.0.1",
-  "private": true,
-  "description": "mf-workspace",
+  "description": "mf-space",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ailushyk/mf-workspace.git"
+    "url": "git+https://github.com/ailushyk/mf-space.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ailushyk/mf-workspace/issues"
+    "url": "https://github.com/ailushyk/mf-space/issues"
   },
-  "homepage": "https://github.com/ailushyk/mf-workspace#readme",
-  "workspaces": [
-    "packages/mf-ui",
-    "apps/mf-shell"
-  ]
+  "homepage": "https://github.com/ailushyk/mf-space#readme",
+  "workspaces": []
 }
