--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mf-space",
   "main": "index.js",
   "scripts": {
+    "start": "lerna run --parallel start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "workspaces": [
     "packages/*",
     "apps/*"
-  ]
+  ],
+  "devDependencies": {
+    "lerna": "^4.0.0"
+  }
 }
