--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "lerna run --parallel start",
+    "build": "ehco \"Error: no build specified\" && exit 1",
+    "build:cli": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": "./dist/cli/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ailushyk/mf-space.git"
   },
   "keywords": [],
   "author": "Alex Iliushyk",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ailushyk/mf-space/issues"
   },
@@ -23,6 +26,12 @@
     "apps/*"
   ],
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@types/node": "^16.9.2",
+    "@types/yargs": "^17.0.2",
+    "lerna": "^4.0.0",
+    "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "yargs": "^17.1.1"
   }
 }
