--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "mf-space",
   "version": "0.0.3",
   "description": "mf-space",
-  "main": "index.js",
+  "main": "./dist/cli/index.js",
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "ehco \"Error: no build specified\" && exit 1",
-    "build:cli": "tsc",
+    "start": "tsc --watch",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": "./dist/cli/index.js",
