--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
   "devDependencies": {
     "@types/node": "^16.9.2",
     "@types/yargs": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
     "prompts": "^2.4.1",
     "typescript": "^4.4.3"
   },
