--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": "./dist/cli/index.js",
+  "bin": {
+    "mf-space": "mf-space"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ailushyk/mf-space.git"
