--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": "./dist/cli/index.js",
+  "bin": {
+    "mf-space": "mf-space"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ailushyk/mf-space.git"
@@ -21,11 +23,13 @@
   },
   "homepage": "https://github.com/ailushyk/mf-space#readme",
   "devDependencies": {
+    "@types/degit": "^2.8.3",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
+    "degit": "^2.8.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
