--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ESNext",
     "module": "CommonJS",
     "declaration": true,
-    "declarationDir": "./dist/types/cli",
-    "outDir": "./dist/cli",
+    "declarationDir": "./dist/types",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -12,6 +12,6 @@
     "skipLibCheck": true
   },
   "include": [
-    "./src/cli"
+    "./bin"
   ]
 }
